<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Places</string>
    <string name="action_settings">Settings</string>
    <string name="mislugares">My Places</string>
    <string name="mostrar">Show Places</string>
    <string name="preferencias">Preferences</string>
    <string name="acerca">About</string>
    <string name="salir">Close</string>
	<string name="nombre">Name:</string>
	<string name="msjnombre">something that identifies the place</string>
	<string name="tipo">Type:</string>
	<string name="direccion">Address:</string>
	<string name="msjdir">place\'s address</string>
	<string name="tel">Phone:</string>
	<string name="msjtel">phone contact</string>
	<string name="url">Url:</string>
	<string name="msjurl">website</string>
	<string name="comentario">Annotation:</string>
	<string name="msjcomentario">Enter your notes</string>
	<string name="comentarioacerdade">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo
    se pueden lanzar nuevas actividades desde la actividad principal</string>
    <string name="tituloconfig">Settings</string>
    <string name="tituloacerca">About &#8230;</string>
    <string name="titulobuscar">Search</string>
    <string name="titulonotificaciones">Send notifications</string>
    <string name="msjnotificaciones">Report if you are near to a place</string>
    <string name="titulodistancianoti">Notifying Distance</string>
    <string name="msjdistancianoti">Minimun distance in kms to notify</string>
    <string name="titulocriterioorden">Sort Order</string>
    <string name="msjcriterioorden">That places you want to appear before</string>
    
	<string name="titulonoticorreo">Email Notifications</string>
	<string name="titulorecibiremail">Receiving Email</string>
	<string name="msjrecibiremail">Receiving Email with place \'s information</string>
	<string name="titulodiremail">Email Address</string>
	<string name="msjdiremail">Account where notifications will be sent</string>
	<string name="titulonotitipos">Notification \'s Types</string>
	<string name="msjnotitipos">What kind of mail you want to receive</string>
	
	<string name="comenlugar">Place \`s Comment</string>
	<string name="dirlugar">Place \'s Address</string>
	<string name="fecha">Date</string>
	<string name="hora">Time</string>
	<string name="logocamara">camera logo</string>
	<string name="logodir">address logo</string>
	<string name="logofecha">date logo</string>
	<string name="logohora" >time logo</string>
	<string name="logourl">url logo</string>
	<string name="logocomen">comment logo</string>
	<string name="logotel">phone logo</string>
	<string name="logotipo">type logo</string>
	<string name="logogaleria">gallery logo</string>
	<string name="nombrelugar">Place \'s Name</string>
	<string name="tellugar">Place \'s Phone</string>
	<string name="tipolugar">Place \'s Type</string>
	<string name="urllugar">Place \'s Url</string>
	<string name="foto">photography</string>
	
	<string name="compartir">Share</string>
	<string name="comollegar">How to arrive</string>
	<string name="editar">Edit</string>
	<string name="borrar">Delete</string>
	
	<string name="titulocuadroborrar">Delete Place</string>
	<string name="msjborrarlugar">You will sure  to want delete this place?</string>
	<string name="positivo">OK</string>
	<string name="negativo">Cancel</string>
	
	<string name="guardar">Save</string>
	<string name="nolugares">Not have Places</string>
	
	
</resources>
