<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/t_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t_nombre"
            android:hint="@string/msjnombre"
            android:inputType="text" />

        <TextView
            android:id="@+id/t_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre"
            android:text="@string/tipo" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/t_tipo"
            android:layout_toRightOf="@+id/t_nombre" />
        
        <TextView 
            android:id="@+id/t_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tipo"
            android:text="@string/direccion"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/msjdir"
            android:layout_below="@+id/t_direccion"
            />
        
        <TextView android:id="@+id/t_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/direccion"
            android:text="@string/tel"
	        android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/msjtel"
            android:layout_below="@+id/t_tel"/>
        
        <TextView android:id="@+id/t_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:layout_below="@+id/telefono"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/msjurl"
            android:layout_below="@+id/t_uri"/>
        
        <TextView android:id="@+id/t_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentario"
            android:layout_below="@+id/url"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText android:id="@+id/comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/msjcomentario"
            android:layout_below="@+id/t_comentario"/>
        
        
        
    </RelativeLayout>

</ScrollView>