<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView 
        style="@style/EstiloTexto"
        android:text="@string/mislugares"
        android:textSize="@dimen/titulo"/>

<Button android:id="@+id/Button01"
    style="@style/EstiloTexto.Botones"
    android:textSize="@dimen/boton"
    android:text="@string/mostrar"
    android:onClick="lanzarVistaLugar"
    />

<Button android:id="@+id/Button02"
    style="@style/EstiloTexto.Botones"
    android:textSize="@dimen/boton"
    android:text="@string/preferencias"
    android:onClick="lanzarPreferencias"/>

<Button android:id="@+id/Button03"
     style="@style/EstiloTexto.Botones"
    android:textSize="@dimen/boton"
    android:text="@string/acerca"
    android:onClick="lanzarAcercaDe"/>

<Button android:id="@+id/Button04"
     style="@style/EstiloTexto.Botones"
    android:textSize="@dimen/boton"
    android:text="@string/salir"
    android:onClick="salir"/>
</LinearLayout>
